--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Marcus Franke</h1>
+    <h2>Web Developer</h2>
+    <hr>
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+    <a href="./public/movie-ranking.html">"Movie Ranking Project"</a>
+    <img src="./assets/images/movie-ranking.png" alt="Movie Ranking" width="350" height="300"> 
+    <hr>
+    <a href="./public/birthday-invite.html">"Birthday Invite Project"</a>    
+    <img src="./assets/images/birthday-invite.png" alt="Birthday Cake" width="350" height="300">
+</body>
+</html>
+
+
+
 
 <!-- TODO 4: Add titles/subtitles etc. -->
 
